# esp32-c5-devkit-wifi-repeater

./: CMakeLists.txt  MONITORING_GUIDE.md  PROJECT_SUMMARY.txt  REVIEW_AND_FIXES.md  WIFI_PROVISIONING_PLAN.md  WPA3_TRANSITION_PLAN.md  partitions.csv  run_repeater.sh  sdkconfig  sdkconfig.bak  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  ap_clients.c  ap_clients.h  dns_log.c  dns_log.h  dns_proxy.c  dns_proxy.h  main.c  sys_monitor.c  sys_monitor.h  web_server.c  web_server.h  wifi_config_manager.c  wifi_config_manager.h
main/www/: index.html  script.js  setup.html  style.css
